tester/testsuite/extensions/arrays1/bad/bad002.jl
/* length not of integer type */

int main() {
	int[] array = new int[5.0];
	return 0;
}
